fix: updating color for coming soon link to make more visible

--- a/src/components/page-sections/ComingSoon/style.css
+++ b/src/components/page-sections/ComingSoon/style.css
@@ -4,3 +4,7 @@
   align-items: center;
   justify-content: center;
 }
+
+#coming-soon a {
+  color: white;
+}
